# ml-start

./: .gitignore  Makefile  README.md  pyproject.toml
01_01_python_basics/: 01_python_basics.ipynb  Lesson 1.ipynb
01_08_git/: git_notes.txt
01_09_fastapi_backend/live-coding/: requirements.txt  test_request.py
01_09_fastapi_backend/myfastapi-start/: app.py  requirements.txt
01_10_orm_basics/: .pylintrc  requirements.txt
01_10_orm_basics/exercises/: database.py  error.txt  table_post.py  table_user.py
01_11_airflow/solutions/: dag-09.py  dag-11.py  dag-12.py
01_12_advices_development/: README_poetry_how2.txt  envs_creds_howto.txt  linterspy.txt
02_01_ml_intro/: HW1new.ipynb  Practice_1.ipynb
02_02_metrics_quality/: HW_2.ipynb  Practice_2.ipynb
02_03_linear_regression/: Practice_3.ipynb
02_04_gradient_descent/: HW_4.ipynb  KKG_HW_4_2.ipynb  Practice_4.ipynb  __HW_4.ipynb  _____HW_4.ipynb  homework.ipynb
02_05_cross-validation/: Practice_5.ipynb  _HW5_NEW.ipynb  hw_05.ipynb  hw_5_1.ipynb
02_06_regularization_scaling_multicollinearity/: Practice_6.ipynb  _HW_6.ipynb  hw_06_regularization.ipynb
02_07_feature_selection/: hw_7.ipynb
03_python/00_intro/: Intro teaser.ipynb
03_python/05_pandas/: res_06 (1).csv  res_06 (2).csv  res_06 (4).csv  res_06.csv  task_12.csv  task_12_2 (1).csv  task_12_2.csv
04_libs_stack_for_data/: 03_04_my_notebook.ipynb
05_pandas/: res_06 (5).csv
11_airflow/: Lecture 11.ipynb
12_advices_development/: README_poetry_how2.txt  README_pyenvs_how2.txt  environments_python_how2.txt
debugging/: debugger_samples.py
(+11 files in other folders)
