[tool.poetry]
name = "ml_start"
version = "0.1.0"
description = ""
authors = ["ivekhov <ivekhov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.dev-dependencies]
apache-airflow = "^2.5.2"
pylint = "^2.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
