[tool.poetry]
name = "ml_karpov"
version = "0.1.0"
description = ""
authors = ["ivekhov <ivekhov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "2.17.1"
pytest = "7.2.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
psycopg2-binary = "^2.9.5"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
